search box is higher to ensure font text isn't clipped

--- a/src/styles/_objects.panel.scss
+++ b/src/styles/_objects.panel.scss
@@ -115,7 +115,7 @@
 
             @include mq($from: tablet, $until: desktop) {
                 font-family: 'PT Serif', serif;
-                height: 27px;
+                height: 30px;
                 width: 289px;
                 background: transparent;
                 outline: none;
@@ -127,7 +127,7 @@
             }
             @include mq($from: desktop, $until: wide) {
                 font-family: 'PT Serif', serif;
-                height: 27px;
+                height: 30px;
                 width: 289px;
                 background: transparent;
                 outline: none;
@@ -139,7 +139,7 @@
             }
             @include mq($from: wide) {
                 font-family: 'PT Serif', serif;
-                height: 27px;
+                height: 30px;
                 width: 289px;
                 background: transparent;
                 outline: none;
